reconfigured: reconfigured dev-aid to work with ProtoPI when both are siblings in a folder

--- a/package.json
+++ b/package.json
@@ -7,18 +7,24 @@
     "build:prod": "NODE_ENV=production vite build",
     "preview:dev": "vite preview --outDir dist_dev",
     "preview:prod": "vite preview --outDir dist_prod",
-    "cleanup:files": "cd ../../.. && yarn run cleanup:files",
-    "cleanup:yarn": "cd ../../.. && yarn run cleanup:yarn"  
+    "cleanup:yarn": "yarn cache clean",
+    "cleanup:files": "find . -type d \\( -name 'node_modules*' -o -name '.vscode-test*'  -o -name 'package-lock.json' -o -name 'dist*' -o -name 'out*' -o -name 'dist_dev*' -o -name 'dist_prod*' \\) -exec rm -rf {} + && find . -type f \\( -name 'yarn [0-9]*.lock' -o -name '*.timestamp-*.mjs' -o -name 'yarn.lock' \\) -exec rm -f {} + && echo 'Cleanup completed!'",
+    "empty:trash": "sudo rm -rf ~/.Trash/*"
   },
   "type": "module",
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tsconfig/svelte": "^5.0.4",
     "@types/crypto-js": "^4.2.2",
+    "@types/lodash": "^4.17.7",
     "@types/express": "^4.17.21",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^20.14.2",
     "@types/sortablejs": "^1.15.8",
+    "@types/type-is": "^1.6.6",
     "@types/uuid": "^10.0.0",
+    "@types/vscode": "^1.89.0",
+    "@types/yaml": "^1.9.7",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "postcss-load-config": "^6.0.1",
