--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore Vite timestamp files
+*.timestamp-*.mjs
+
 # macOS system files
 .DS_Store
 .AppleDouble
@@ -24,12 +27,15 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+dist_dev/
+dist_prod/
 
 # Project Directories and Files
 .env
 out
 dist
 node_modules
+node_modules/
 .vscode-test/
 *.vsix
 package-lock.json
