build-visualizer:  added build visualizer (rollup-plugin-visualizer) to help in determining what takes long to build

--- a/svelte/tsconfig.json
+++ b/svelte/tsconfig.json
@@ -24,7 +24,7 @@
   },
   "include": [
     "../src/**/*", 
-    "../../../extensions/vscode/webviews/**/*"
+    "../../ProtoPI/webviews/**/*"
   ],
   "exclude": [
     "node_modules",  // Correctly exclude node_modules
