--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tsconfig/svelte": "^5.0.4",
     "@types/crypto-js": "^4.2.2",
-    "@types/lodash": "^4.17.7",
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.7",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.14.2",
     "@types/sortablejs": "^1.15.8",
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "postcss-load-config": "^6.0.1",
+    "rollup-plugin-visualizer": "^5.12.0",
     "svelte": "^4.2.18",
     "svelte-preprocess": "^6.0.0",
     "tailwindcss": "^3.4.4",
